Adds optional step to assembly script to measure ETROC+LGAD relative alignment

--- a/ThroughPut/Setup_Dialog.ini
+++ b/ThroughPut/Setup_Dialog.ini
@@ -1,7 +1,7 @@
 ; Execute with: DIALOG Scripts\ETLModules\Throughput\Setup_Dialog.ini
 [window]
 width=220
-height=300
+height=380
 title=Throughput Assembly Setup
 
 [int_input_1]
@@ -15,7 +15,7 @@ variable="$pcb_chuck_num"
 label=Build Module 1?
 x=10
 y=60
-default=true
+default=false
 variable=&enabled_1
 
 [int_input_2]
@@ -43,7 +43,7 @@ variable=&id_2
 label=Build Module 3?
 x=10
 y=160
-default=true
+default=false
 variable=&enabled_3
 
 [int_input_4]
@@ -66,3 +66,10 @@ x=100
 y=210
 default=0
 variable=&id_4
+
+[bool_input_5]
+label=Include LGAD Survey?
+x=60
+y=290
+default=true
+variable=&do_lgad_survey
