Fixes Throughput survey dialog, misc tweaks

--- a/ThroughPut/Assembly_Setup_Dialog.ini
+++ b/ThroughPut/Assembly_Setup_Dialog.ini
@@ -1,4 +1,4 @@
-; Execute with: DIALOG Scripts\ETLModules\Throughput\Setup_Dialog.ini
+; Execute with: DIALOG Scripts\ETLModules\Throughput\Assembly_Setup_Dialog.ini
 [window]
 width=220
 height=380
@@ -71,5 +71,5 @@ variable=&id_4
 label=Include LGAD Survey?
 x=60
 y=290
-default=true
+default=false
 variable=&do_lgad_survey
